# django-serial-preferences

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/serial_preferences/: __init__.py  introspection.py  pref.py  proxy.py  schema.py  validators.py
src/serial_preferences/contrib/: strawberry.py
src/serial_preferences/django/: __init__.py  fields.py
tests/: conftest.py  models.py  settings.py  test_fields.py  test_inheritance.py  test_introspection.py  test_pref.py  test_proxy.py  test_schema.py  test_strawberry.py  test_validators.py
