[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-serial-preferences"
version = "0.1.0"
description = "Typed, grouped preferences for Django models with schema introspection"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2",
]

[project.optional-dependencies]
strawberry = ["strawberry-graphql>=0.220.0"]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "strawberry-graphql>=0.220.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/serial_preferences"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["src", "."]
